# pyrill

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
code_samples/: README.md  all_snippets.md
code_samples/auth/: auth_whoami.md
code_samples/client/: client_connection.md
code_samples/navigation/: url_builder_basic.md  url_builder_comparison.md  url_builder_leaderboard.md  url_builder_pivot.md  url_builder_timezone.md
code_samples/orgs/: get_org.md  list_orgs.md
code_samples/partitions/: list_partitions_basic.md  list_partitions_filtering.md  list_partitions_pagination.md
code_samples/projects/: get_project.md  get_project_resources.md  get_project_status.md  list_projects.md
code_samples/publicurls/: create_publicurl.md  list_publicurls_basic.md  list_publicurls_pagination.md
code_samples/query/: basic_metrics_query.md  metrics_query_complex_filter.md  metrics_query_dict.md  metrics_query_iso_duration.md  metrics_query_time_dimension.md  metrics_query_with_filter.md  metrics_sql_query.md  query_builder_basic.md  query_builder_filters.md  sql_query.md
code_samples/reports/: create_report.md  delete_report.md  edit_report.md  generate_yaml.md  get_report.md  get_report_error.md  list_reports.md  report_options_model.md  trigger_report.md  unsubscribe_report.md
code_samples/rilltime/: 1h_as_of_watermark_h.md  2d_as_of_watermark_d.md  2d_to_ref_as_of_latest_d.md  day_2_of_last_2_weeks.md  first_2_hrs_of_last_2_days.md  iso_date.md  iso_month.md  iso_time_range.md  iso_year.md  last_2_days_excluding_current.md  last_2_mins_of_last_2_days.md  last_2_weeks_excluding_current.md  mtd.md  previous_complete_day.md  previous_complete_month.md  previous_complete_quarter.md  w1.md  w1_as_of_2m_ago.md  w2_as_of_1m_as_of_latest_m.md  week_2_of_last_2_months.md  week_monday_boundary.md  week_thursday_boundary.md
code_samples/users/: get_user.md  get_usergroup.md  list_usergroups.md  list_users.md
examples/: README.md  quicktest.py  test_pyrill.py  using_the_pyrill_client.ipynb
src/pyrill/: __init__.py  client.py  config.py  exceptions.py  logging.py  query_builder.py  url_builder.py
src/pyrill/models/: __init__.py  alerts.py  annotations.py  core.py  iframe.py  navigation.py  orgs.py  partitions.py  query.py  (+4 more)
tests/: README.md  conftest.py
tests/client/: conftest.py
tests/fixtures/: report_generator.py  sample_data.py
(+84 files in other folders)
