[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrill"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.beads",
  "/ai",
  "/workspace",
  "/.claude",
  "/.cursor",
  "/AGENTS.md",
  "/CLAUDE.md",
  "/RILL-CONTRIBUTING.md",
  "/pyrill.prd.md",
  "/pyrill.code-workspace",
  "/.github/workflows/publish-testpypi.yml",
  "/.github/workflows/sync-public.yml",
]

[project]
name = "pyrill"
version = "0.0.780"
description = "Python SDK for Rill Data API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Rill Data"}
]
license = {text = "MIT"}
keywords = ["rill", "data", "analytics", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbstripout>=0.8.1",
]

[tool.uv]
dev-dependencies = [
    # Testing framework
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ipython>=8.0.0",
    # Browser testing
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=pyrill",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests (require real credentials)",
    "browser: Browser-based validation tests (require Playwright)",
]

[tool.coverage.run]
source = ["pyrill"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
